Fix rendering issue on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,3 @@
-/* Something in here is messing up Bootstrap */
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    height: 100%
-}
-
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -46,7 +34,6 @@ nav {
 
 nav ul, footer ul {
     margin: 0 auto;
-    /* width: 80%; */
     display: flex;
     justify-content: space-between;
 }
@@ -54,15 +41,6 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline;
     margin-right: 15px;
-}
-
-.vh-100 {
-    height: 100vh;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
 }
 
 .content-container {
@@ -99,10 +77,10 @@ ul.posts li {
     background-image: url("/assets/bars.svg");
 }
 
-.weekly-unsplash-background {
+/* .weekly-unsplash-background {
     background: url('https://source.unsplash.com/daily?tree') no-repeat center center/cover;
     height: 100vh;
-}
+} */
 
 .glowText{
     text-decoration: underline;
@@ -112,5 +90,10 @@ ul.posts li {
 }
 
 @keyframes glow {
-    text-shadow: 1px 1px 2px black, 0 0 25px grey, 0 0 5px grey;
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+      }
+      to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+      }
 }
